.kubernetes/base/prod.namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    shared-gateway-access: "true"
